--- a/content/20.zksync-protocol/15.zksyncos/00.overview-up.md
+++ b/content/20.zksync-protocol/15.zksyncos/00.overview-up.md
@@ -24,7 +24,7 @@ new state after the application of the block.
 ADI Network execution layer is implemented as a Rust program that will be compiled to two targets. This first one, x86, is used for running in the sequencer.
 The second, RISC-V, is fed as an input to the ZKsync Airbender prover to produce the validity proof of the state transition.
 
-## Components of ZKsync OS
+## Components of ADI Network execution layer
 
 The main components of the ADI Network execution layer are:
 
