--- a/content/20.zksync-protocol/15.zksyncos/00.overview-up.md
+++ b/content/20.zksync-protocol/15.zksyncos/00.overview-up.md
@@ -8,7 +8,7 @@ pillars: [**ZKsync Airbender**](/zksync-protocol/zksync-airbender/overview),
 a next-generation proof system,
 and a modular execution layer based on the **ZKsync OS** stack.
 
-In this section, we will deep dive into ZKsync OS.
+In this section, we will deep dive into the ADI Network execution layer.
 
 ::callout{icon="i-heroicons-exclamation-triangle" color="amber"}
 The ADI network and ZKsync OS are under active development; you can track the updates for [**ZKsync OS**](https://docs.zksync.io/zksync-protocol/zksyncos/overview) here.
