Update and rename 02.bootloader.md to 02.bootloader-up.md

--- a/content/20.zksync-protocol/15.zksyncos/02.bootloader-up.md
+++ b/content/20.zksync-protocol/15.zksyncos/02.bootloader-up.md
@@ -1,6 +1,6 @@
 ---
 title: Bootloader
-description: Learn about Bootloader, the entrypoint of the system
+description: Learn about Bootloader, the entry point of the system
 ---
 
 The bootloader is the component responsible for implementing the general blockchain protocol. Roughly, this means:
@@ -14,19 +14,14 @@ The bootloader is the component responsible for implementing the general blockch
 7. Repeat from 3 until there are no more transactions.
 8. Finalizing the block.
 
-This component is, as the name suggest, the entrypoint of the system.
-The function  [`run_prepared`](https://github.com/matter-labs/zk_ee/blob/main/basic_bootloader/src/bootloader/mod.rs) implements this
-top-level main loop.
-
 ### Configuration
 
-The bootloader can be configured with the following parameters
-(found in the [`BasicBootloaderExecutionConfig`](https://github.com/matter-labs/zk_ee/blob/main/basic_bootloader/src/bootloader/config.rs) struct):
+The bootloader can be configured with the following parameters:
 
-- `ONLY_SIMULATE`: skips the [validation](/zksync-protocol/zksyncos/tx-processing#validation) step
+- `ONLY_SIMULATE`: skips the [validation](/zksync-protocol/zksyncos/tx-processing#validation) **TBD ADI Link** step
 when processing a transaction. Used for call simulation in the node.
 - `IS_PROVING_ENVIRONMENT`: to skip some checks during sequencing.
-- `SPECIAL_ADDRESS_SPACE_BOUND`: the range of address (starting from 0) where system contracts can be deployed.
+- `SPECIAL_ADDRESS_SPACE_BOUND`: the range of addresses (starting from 0) where system contracts can be deployed.
 - `AA_ENABLED`: whether native account abstraction is enabled.
 
 In addition, the `basic_bootloader` crate has the following compilation flags:
@@ -41,24 +36,25 @@ has a special formal address (0x8001) that is always allowed to receive token tr
 
 For transaction execution, the bootloader has to execute some contract code. This contract code corresponds to one of the
 supported VMs, and is executed through the
-[Execution Environment (EE)](/zksync-protocol/zksyncos/execution-environment) module.
+[Execution Environment (EE)](/zksync-protocol/zksyncos/execution-environment) **TBD ADI Link** module.
 
 A contract call is executed through an interplay between the bootloader and (potentially different) execution environments. Indeed, a contract
 executing in a given EE can call to contracts that run on a different EE or to
-a [System Hook](/zksync-protocol/zksyncos/system-hooks). This interplay is described
-under [Runner Flow](/zksync-protocol/zksyncos/runner-flow).
+a [System Hook](/zksync-protocol/zksyncos/system-hooks) **TBD ADI Link**. This interplay is described
+under [Runner Flow](/zksync-protocol/zksyncos/runner-flow) **TBD ADI Link**.
 
 ### Block Header
 
-At the end of the execution the bootloader outputs the block header.
+At the end of the execution, the bootloader outputs the block header.
 
-For the block header, the Ethereum format will be used. However, some of the fields will be set differently in the first version for simplification.
+For the block header, the Ethereum format will be used. However, some fields will be set differently in the initial version for simplification.
 
-The block header should determine the block fully, i.e. include all the inputs needed to execute the block.
+The block header should fully determine the block, i.e., include all the necessary inputs to execute the block.
 
+**TBD Discuss with a team**
 <!-- markdownlint-disable -->
 
-| Ethereum <br> Field Name | Ethereum value                                                                                                  | ZKsync OS value                                                                                             | Comments                                |
+| Ethereum <br> Field Name | Ethereum value                                                                                                  | ADI Network value                                                                                             | Comments                                |
 |---------------------|------------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------------------|-----------------------------------------|
 | parent_hash         | previous block hash                                                                                               | previous block hash                                                                                          |                                         |
 | owners_hash         | 0x1dcc4de8dec75d7aab85b567<br>b6ccd41ad312451b948a7413f<br>0a142fd40d49347 (post merge) | 0x1dcc4de8dec75d7aab<br>85b567b6ccd41ad312451b<br>948a7413f0a142fd40d49347                                       | hash of empty RLP list                  |
