--- a/content/20.zksync-protocol/15.zksyncos/02.bootloader-up.md
+++ b/content/20.zksync-protocol/15.zksyncos/02.bootloader-up.md
@@ -16,7 +16,8 @@ The bootloader is the component responsible for implementing the general blockch
 
 ### Configuration
 
-The bootloader can be configured with the following parameters:
+The bootloader can be configured with the following parameters
+(found in the [`BasicBootloaderExecutionConfig`](https://github.com/matter-labs/zk_ee/blob/main/basic_bootloader/src/bootloader/config.rs) **TBD ADI Github Link** struct):
 
 - `ONLY_SIMULATE`: skips the [validation](/zksync-protocol/zksyncos/tx-processing#validation) **TBD ADI Link** step
 when processing a transaction. Used for call simulation in the node.
