--- a/content/20.zksync-protocol/15.zksyncos/03.execution-environme-up.md
+++ b/content/20.zksync-protocol/15.zksyncos/03.execution-environme-up.md
@@ -7,6 +7,11 @@ Execution Environment (EE) is ADI's abstraction for a VM. They define their own 
 internal frame state. They are initialized and managed by the bootloader. When an EE reaches an exit state (call into another contract,
 deployment, or return), it yields to the bootloader to handle it.
 
+### Interface
+
+ADI Network provides an interface to define EE and some concrete instances. We start by describing the key elements of this interface, which is
+located in this [directory](https://github.com/matter-labs/zk_ee/blob/main/zk_ee/src/system/execution-environment/mod.rs). **TBD ADI Github Link**
+
 ### Launch Parameters
 
 An EE needs some initial data to be run. This data includes:
