Update and rename 04.system.md to 04.system-up.md

--- a/content/20.zksync-protocol/15.zksyncos/04.system-up.md
+++ b/content/20.zksync-protocol/15.zksyncos/04.system-up.md
@@ -9,11 +9,11 @@ It provides access to memory, IO, and oracles. Oracles are the interface throu
 The System struct is generic over memory, IO, oracles and allocators and provides little else besides
 access to those and block metadata. The *Concrete system implementations* are two instances of those components to result in full system
 implementations, one for the sequencer and the other for the prover (as mentioned in the
-[Overview](/zksync-protocol/zksyncos/overview#running-environments)).
+[Overview](/zksync-protocol/zksyncos/overview#running-environments)). **TBD ADI Links**
 
 ### System Struct
 
-We start by describing the [system struct](https://github.com/matter-labs/zk_ee/blob/main/zk_ee/src/system/mod.rs).
+We start by describing the [system struct](https://github.com/matter-labs/zk_ee/blob/main/zk_ee/src/system/mod.rs). **TBD ADI Github Links**
 
 For convenience, the system is parameterized with `S: SystemTypes`, which bundles all the types the system is generic over.
 
@@ -25,14 +25,14 @@ requiring `S::IO: IOSubsystemExt`.
 
 ### Resources and IO types configuration
 
-The system is generic in how it represents computational resources.
+The system is generic in its representation of computational resources.
 It provides a reference implementation for
-[resources](https://github.com/matter-labs/zksync-os/blob/main/zk_ee/src/reference_implementations/mod.rs) that models both
+[resources](https://github.com/matter-labs/zksync-os/blob/main/zk_ee/src/reference_implementations/mod.rs) **TBD ADI Github Links** that models both
 EE (an amount of ergs, consumed as gas in Ethereum) and native resources (used for proving). More details about resource accounting can
 be found in Double resource accounting.
 
 It is also generic over the types used for IO—such as addresses, storage keys and values, balances, etc.
-The system implements an [instance](https://github.com/matter-labs/zksync-os/blob/main/zk_ee/src/types_config/mod.rs) for
+The system implements an [instance](https://github.com/matter-labs/zksync-os/blob/main/zk_ee/src/types_config/mod.rs) **TBD ADI Github Links** for
 Ethereum-like systems with the expected Ethereum types.
 
 While many parts of the codebase require EthereumLikeTypes, maintaining type-level abstraction ensures
@@ -42,8 +42,8 @@ that components not dependent on these specific types remain isolated and do not
 
 The system also describes a set of pure functions that should be part of any system implementation.
 These are mostly cryptographic primitives and are described in the
-[`SystemFunctions`](https://github.com/matter-labs/zk_ee/blob/main/zk_ee/src/system/base_system_functions.rs) trait. Most of them are used to
-implement precompiles as [System Hooks](/zksync-protocol/zksyncos/system-hooks).
+[`SystemFunctions`](https://github.com/matter-labs/zk_ee/blob/main/zk_ee/src/system/base_system_functions.rs) **TBD ADI Github Links** trait. Most of them are used to
+implement precompiles as [System Hooks](/zksync-protocol/zksyncos/system-hooks) **TBD ADI Links**.
 
 ### IO and Memory Subsystems
 
@@ -66,12 +66,12 @@ If you have access to a System with the *Ext versions of the subsystems availabl
 - Query the oracle to read the next transaction,
 - Deploy bytecode,
 - Initialize the system from the oracle,
-- Finalize the system after the block processing is done.
+- Finalize the system after the block processing is done. 
 
 ### Implementations of the System's Parts
 
-The system functions are implemented in [this directory](https://github.com/matter-labs/zk_ee/blob/main/basic_system/src/system_functions).
-Some of them had to be implemented from scratch or forked due to the need to not use the global allocator in proof running mode.
+The system functions are implemented in [this directory](https://github.com/matter-labs/zk_ee/blob/main/basic_system/src/system_functions). **TBD ADI Github Links**
+Some of them had to be implemented from scratch or forked due to the need not to use the global allocator in proof running mode.
 
 These parts differ between forward-running and proving:
 
