--- a/content/20.zksync-protocol/15.zksyncos/05.tx-processing.md
+++ b/content/20.zksync-protocol/15.zksyncos/05.tx-processing.md
@@ -4,7 +4,7 @@ description: Learn how transactions are processed
 ---
 
 This section describes how transactions are processed. There are 2 flows of transaction processing, one for L1 transactions and one for L2
-transactions. We'll describe the latter first and the **L1 -> L2 transactions** section will explain the differences in the former.
+transactions. We'll describe the latter first, and the **L1 -> L2 transactions** section will explain the differences in the former.
 
 1. **Parsing**: The transaction is parsed to extract its details.
 2. **Resource Calculation**: The bootloader computes the transaction's resource usage, including gas limits and intrinsic costs.
@@ -22,7 +22,7 @@ transaction's gas limit, checking it's bounded by the block's gas limit and subt
 ## Validation
 
 The first step of validation done by the bootloader is checking that the nonce is not used. This is done by calling the corresponding account
-model method. We use incremental nonces like the ones in Ethereum. Note that for this operation, and many like it, the bootloader needs
+model method. We use incremental nonces, similar to those in Ethereum. Note that for this operation, and many like it, the bootloader needs
 to access the storage through the System.
 
 Then the account model validation method is called. This performs the balance check for the token transfer, signature verification,
@@ -33,15 +33,15 @@ performing the transfer to the bootloader's formal address.
 
 ### Pubdata Considerations
 
-ZKsync OS has to publish some data to the settlement layer to ensure the rollup's state can be recovered at any time.
-This what we call ["pubdata"](/zksync-protocol/contracts/handling-pubdata), and includes state diffs after a block
+The ADI Network must publish data to the settlement layer to ensure the rollup's state can be recovered at any time.
+This is what we call **"pubdata"**, and includes state diffs after a block
 application and some required preimages. Given that making this data available costs money, we need to ensure that a transaction has enough
 resources to pay for its share of pubdata. Thus, the final step of validation is charging for the pubdata size produced after validation.
 
 ## Execution
 
-Validation can fail for a number of different reasons, detailed in the `InvalidTransaction` type in the Errors module.
-It it succeeds, the bootloader proceeds to execute the transaction.
+Validation can fail for several reasons, as detailed in the `InvalidTransaction` type in the Errors module.
+If it succeeds, the bootloader proceeds to execute the transaction.
 
 This step is straightforward: the bootloader simply calls the account mode's execution method.
 
@@ -55,13 +55,7 @@ After transaction execution, the bootloader checks if there are enough resources
 
 The last step in the transaction processing is the refund of unused resources.
 
-## Lifecycle of a transaction in the bootloader
-
-To summarize, the lifecycle of an L2 transaction can be visualized as follows:
-
-![zksyncOS.png](/images/zksyncos-airbender/tx_lifecycle.png)
-
 ## L1 -> L2 transactions
 
 The main difference in the processing of L1 transactions is that there is no validation step. The value for this transaction is minted, as those
-funds are now locked in the L1 bridge. For now, deployment transactions from L1 transactions are not supported.
+funds are now locked in the L1 bridge. Currently, deployment transactions from L1 are not supported.
