--- a/content/20.zksync-protocol/15.zksyncos/00.overview-up.md
+++ b/content/20.zksync-protocol/15.zksyncos/00.overview-up.md
@@ -22,7 +22,7 @@ It takes block data and an initial state as input and computes the
 new state after the application of the block.
 
 ADI Network execution layer is implemented as a Rust program that will be compiled to two targets. This first one, x86, is used for running in the sequencer.
-The second, RISC-V, is fed as an input to the ZKsync Airbender prover to produce the validity proof of the state transition.
+The second, RISC-V, is fed as an input to the Airbender prover to produce the validity proof of the state transition.
 
 ## Components of ADI Network execution layer
 
