--- a/content/20.zksync-protocol/15.zksyncos/06.system-hooks-up.md
+++ b/content/20.zksync-protocol/15.zksyncos/06.system-hooks-up.md
@@ -3,8 +3,8 @@ title: System Hooks
 description: Learn about the System Hooks
 ---
 
-System hooks are special functions that can be triggered by a call on a specific system address. The space for this special addresses is specified
-in the [bootloader](/zksync-protocol/zksyncos/bootloader) configuration.
+System hooks are special functions that can be triggered by a call on a specific system address. The space for this special address is specified
+in the [bootloader](/zksync-protocol/zksyncos/bootloader) **TBD ADI Links** configuration.
 
 System hooks have two distinct use cases:
 
@@ -17,7 +17,7 @@ System hooks have two distinct use cases:
   - ecadd
   - ecmul
   - ecpairing
-- Implementing system contracts: formal contracts that implement some system functionality, like Era's nonce holder. Needed to support EraVM.
+- Implementing system contracts: formal contracts that implement some system functionality.
   - L1 messenger system hook
   - L2 Base token system hook
   - Contract deployer system hook
@@ -32,8 +32,7 @@ The implementation of the L1 messenger system hook does two things: decodes the 
 ## L2 Base Token System Hook
 
 The L2 base token system implements only two methods: `withdraw(address)`, `withdrawWithMessage(address,bytes)`.
-
-These are required to support EraVM-like base token withdrawals.
+These are required to support base token withdrawals.
 
 ## Contract Deployer System Hook
 
