Update and rename 07.runner-flow.md to 07.runner-flow-up.md

--- a/content/20.zksync-protocol/15.zksyncos/07.runner-flow-up.md
+++ b/content/20.zksync-protocol/15.zksyncos/07.runner-flow-up.md
@@ -4,18 +4,18 @@ description: Learn about the Runner Flow
 ---
 
 This section describes how the bootloader interacts with the execution environments to run contract code.
-This section is complemented by [Execution Environments](/zksync-protocol/zksyncos/execution-environment).
+This section is complemented by [Execution Environment](/zksync-protocol/zksyncos/execution-environment)**TBD ADI Links**.
 
 ## Entrypoints
 
 The bootloader implements and uses two entrypoints for code execution.
 
 The first one is `run_till_completion` from
-the [`runner`](https://github.com/matter-labs/zk_ee/blob/main/basic_bootloader/src/bootloader/runner.rs) module of the bootloader. This function
+the [`runner`](https://github.com/matter-labs/zk_ee/blob/main/basic_bootloader/src/bootloader/runner.rs) **TBD ADI GitHub Links** module of the bootloader. This function
 implements the main execution loop given an initial request (either external call or deployment), which is explained in the next section.
 
 The second one,
-[`run_single_interaction`](https://github.com/matter-labs/zk_ee/blob/main/basic_bootloader/src/bootloader/run_single_interaction.rs),
+[`run_single_interaction`](https://github.com/matter-labs/zk_ee/blob/main/basic_bootloader/src/bootloader/run_single_interaction.rs)**TBD ADI GitHub Links**,
 is just a simple wrapper over the previous to simplify external calls from the bootloader. It just adds the logic for starting and finishing the
 topmost execution frame and prepares the inputs for `run_till_completion`.
 
@@ -38,13 +38,13 @@ The runner breaks out of the infinite loop after processing the completion of th
 For the external call request, the bootloader needs to:
 
 1. Start a frame for call.
-2. Run the call preparation in the system, this will return the callee's bytecode, transfer token value and charge gas according to the EE's policy.
+2. Run the call preparation in the system, which will return the callee's bytecode, transfer token value, and charge gas according to the EE's policy.
 3. Create a new EE state for the call and push it to the callstack.
 4. Call into the newly created EE to start executing the frame.
 
 There's a special case in which the callee is a special address (for example, precompile or system contract).
 In this case the flow is similar, but there's no new EE.
-Instead, the [System Hooks](/zksync-protocol/zksyncos/system-hooks) are used.
+Instead, the [System Hooks](/zksync-protocol/zksyncos/system-hooks) are used **TBD ADI Links**.
 
 After the first call returns a preemption point, the runner will either recursively
 handle a new spawn request (for a nested call/deployment) or the completion of the original call.
@@ -54,7 +54,7 @@ handle a new spawn request (for a nested call/deployment) or the completion of t
 For deployment request, the bootloader needs to:
 
 1. Start a frame for deployment preparation.
-2. Call into the EE to run the deployment preparation. This will compute the deployed address, perform some checks and charge gas.
+2. Call into the EE to run the deployment preparation. This will compute the deployed address, perform some checks, and charge gas.
 3. Create the new EE state for the constructor using the output from the previous call and push it to the callstack.
 4. Start a frame for the constructor execution.
 5. Set nonce to 1 (see EIP-161).
@@ -69,14 +69,3 @@ After the constructor returns a preemption point, the runner will either recursi
 3. Pop the deployer from the callstack.
 4. Copy return data into the return memory of the deployer.
 5. Continue execution of the deployer.
-
-## Flow diagram
-
-We illustrate the flow of an interaction in which an EOA transaction execution calls a contract that, in turn, deploys a new contract. The
-entry point in the following diagram is `Run single interaction`, which is called by the EOA transaction execution, as described
-in [Transaction processing](/zksync-protocol/zksyncos/tx-processing).
-
-![zksyncOS.png](/images/zksyncos-airbender/tx_lifecycle.png)
-
-In this diagram, the dotted lines from the EE to the bootloader are conceptual. In the implementation,
-the bootloader calls into the EE and handles the return value in the next iteration of the main loop.
