--- a/content/10.zk-stack/30.components/40.portal-wallet-bridge-up.md
+++ b/content/10.zk-stack/30.components/40.portal-wallet-bridge-up.md
@@ -10,4 +10,4 @@ It serves as a versatile tool, simplifying various operations within the blockch
 
 - **Bridging Assets:** The Portal enables the movement of assets between the Layer 1 (L1) network and ADI Network, facilitating smooth asset transfers.
 - **Transaction History:** The Bridge provides access to view and verify historical transactions, enhancing transparency and user trust in the platform.
-- **Asset Management:** It supports users in managing assets.
+- **Asset Management:** It supports users in managing assets (list of assets, view your balance).
