--- a/content/00.zksync-network/65.zksync-os/05.network-details.md
+++ b/content/00.zksync-network/65.zksync-os/05.network-details.md
@@ -1,9 +1,9 @@
 ---
-title: ZKsync OS Network
-description: Get connected to ZKsync OS Devnet
+title: ADI Network
+description: Get connected to ADI Testnet
 ---
 
-## Add ZKsync OS Devnet to your MetaMask wallet
+## Add ADI Network Devnet to your MetaMask wallet
 
 You can add ZKsync OS Devnet to your MetaMask wallet using the buttons below:
 
