--- a/content/00.zksync-network/65.zksync-os/05.network-details.md
+++ b/content/00.zksync-network/65.zksync-os/05.network-details.md
@@ -23,9 +23,15 @@ To manually add ZKsync OS Devnet as a custom network in your wallet, follow thes
 
 ### Network details
 
-<!-- // cspell: disable -->
-:zksync-era-network-details{showzksyncos}
-<!-- // cspell: enable -->
+| **PROPERTY**                 | **VALUE**                                                                                     |
+|------------------------------|-----------------------------------------------------------------------------------------------|
+| **Network Name**             | `ZKsync OS Devnet`                                                                           |
+| **RPC URL**                  | [https://zksync-os-testnet-alpha.zksync.dev/](https://zksync-os-testnet-alpha.zksync.dev/)   |
+| **WebSocket URL**            | `wss://zksync-os-testnet-alpha.zksync.dev/ws`                                                |
+| **Chain ID**                 | `8022833`                                                                                    |
+| **Currency Symbol**          | `ETH`                                                                                        |
+| **Block Explorer URL**       | [https://zksync-os-testnet-alpha.staging-scan-v2.zksync.dev/](https://zksync-os-testnet-alpha.staging-scan-v2.zksync.dev/) |
+| **Explorer Verification API**| *(coming soon)*   
 
 ## Get devnet funds for your wallet
 
