--- a/content/00.zksync-network/65.zksync-os/05.network-details-up.md
+++ b/content/00.zksync-network/65.zksync-os/05.network-details-up.md
@@ -25,7 +25,7 @@ To manually add ADI Network Testnet as a custom network in your wallet, follow t
 
 Once you have your wallet connected to the ADI Network Testnet environment,
 you can bridge testnet ADI and ETH from Sepolia Testnet to ADI Network Testnet.
-You can get testnet funds from [testnet faucet](/zksync-network/ecosystem/network-faucets#sepolia-faucets).**TBD ADI Links**
+You can get testnet funds from [testnet faucet](https://faucet.testnet.adifoundation.ai).
 
 ### Bridging testnet ADI and ETH
 
