--- a/content/00.zksync-network/65.zksync-os/07.quickstart.md
+++ b/content/00.zksync-network/65.zksync-os/07.quickstart.md
@@ -8,18 +8,16 @@ You can find instructions for bridging testnet ETH to ZKsync OS devnet in the [N
 
 To get started with Foundry or Hardhat, follow the steps below:
 
-::content-switcher
+# 🚀 Deploying to zkSync OS Devnet
+
+Below are setup examples for **Foundry** and **Hardhat 3** (with Viem or Ethers).  
+Select your preferred setup tab:
+
 ---
-items: [{
-  label: 'Foundry',
-  partial: '_partials/_foundry'
-}, {
-  label: 'Hardhat 3 with Viem',
-  partial: '_partials/_viem'
-}, {
-  label: 'Hardhat 3 with Ethers',
-  partial: '_partials/_ethers'
-},
-]
----
-::
+
+## 🧱 Foundry
+
+1. **Create a new foundry project:**
+   ```bash
+   forge init Counter
+   cd Counter
