--- a/content/00.zksync-network/65.zksync-os/07.quickstart.md
+++ b/content/00.zksync-network/65.zksync-os/07.quickstart.md
@@ -15,220 +15,64 @@ Select your preferred setup tab:
 
 ---
 
-# zkSync OS Devnet – Deployment Guide (HTML Hybrid)
 
-This document embeds interactive HTML directly within Markdown.  
-If your Markdown renderer supports inline HTML (e.g., GitHub Pages, MkDocs, or Notion), the tab switchers and code blocks will appear interactive.
+# 🧱 Foundry Setup
+
+### 1. Create a new Foundry project
+```bash
+forge init Counter
+cd Counter
+```
+
+### 2. Build the project
+```bash
+forge build
+```
+
+### 3. Set your private key for deploying
+```bash
+export TESTNET_PRIVATE_KEY="0x..."
+```
+
+### 4. Deploy the contract
+```bash
+forge script script/Counter.s.sol \
+--rpc-url https://zksync-os-testnet-alpha.zksync.dev \
+--broadcast --private-key $TESTNET_PRIVATE_KEY
+```
+
+### 5. Set the number value
+```bash
+cast send 0xCA1386680bfd9B89c7cc6Fc3ba11938ba6E44fef \
+"setNumber(uint256)" 5 \
+--rpc-url https://zksync-os-testnet-alpha.zksync.dev \
+--private-key $TESTNET_PRIVATE_KEY
+```
+
+### 6. Get the latest number value
+```bash
+cast call 0xCA1386680bfd9B89c7cc6Fc3ba11938ba6E44fef "number()(uint256)" \
+--rpc-url https://zksync-os-testnet-alpha.zksync.dev
+```
 
 ---
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>zkSync OS Devnet – Deployment Guide (Tabs)</title>
-<style>
-  :root{
-    --bg:#0b1220;
-    --panel:#111a2b;
-    --panel-2:#0f1727;
-    --text:#e6edf3;
-    --muted:#9fb0c3;
-    --brand:#5cc8ff;
-    --accent:#6ee7b7;
-    --border:#1f2a40;
-    --code:#0e1726;
-    --shadow:0 10px 30px rgba(0,0,0,.35);
-    --radius:14px;
-    --monospace: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-    --sans: Inter, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji","Segoe UI Emoji";
-  }
-  *{box-sizing:border-box}
-  html,body{height:100%}
-  body{
-    margin:0;
-    background: radial-gradient(1200px 600px at 20% -10%, rgba(92,200,255,.06), transparent 60%),
-                radial-gradient(1200px 600px at 80% 110%, rgba(110,231,183,.06), transparent 60%),
-                var(--bg);
-    color:var(--text);
-    font-family:var(--sans);
-    line-height:1.5;
-    padding:32px;
-  }
-  .container{max-width:980px;margin:0 auto}
-  h1{font-size:28px;margin:0 0 16px}
-  h2{font-size:22px;margin:28px 0 12px}
-  p{color:var(--muted)}
-  .card{
-    background:linear-gradient(180deg,var(--panel),var(--panel-2));
-    border:1px solid var(--border);
-    border-radius:var(--radius);
-    box-shadow:var(--shadow);
-    overflow:hidden;
-  }
-  .header{
-    padding:18px 22px;
-    border-bottom:1px solid var(--border);
-    display:flex;justify-content:space-between;align-items:center;
-  }
-  .badge{font-size:12px;padding:4px 8px;border-radius:999px;background:#0b2239;border:1px solid #153354;color:#9bd2ff}
-  /* Table */
-  table{width:100%;border-collapse:separate;border-spacing:0}
-  th,td{padding:14px 16px;border-bottom:1px solid var(--border)}
-  th{color:#a9bbcf;text-align:left;background:rgba(255,255,255,.02)}
-  tr:last-child td{border-bottom:none}
-  td a{color:var(--brand);text-decoration:none}
-  td code{background:#0a1322;border:1px solid #0e2644;padding:2px 6px;border-radius:8px;color:#c4d7ea}
-  /* Tabs */
-  .tabs{margin-top:22px}
-  .tab-bar{
-    display:flex;gap:10px;flex-wrap:wrap;
-    padding:10px;
-    border-bottom:1px solid var(--border);
-    background:rgba(255,255,255,.02);
-  }
-  .tab{
-    cursor:pointer;
-    padding:10px 14px;
-    border-radius:10px;
-    background:#0c1a2c;
-    border:1px solid var(--border);
-    color:#c6d6e6;
-    font-weight:600;
-    transition:all .2s ease;
-    user-select:none;
-  }
-  .tab:hover{border-color:#2a3c59}
-  .tab.active{
-    background:linear-gradient(180deg,#0f2740,#0b1e33);
-    color:var(--text);
-    border-color:#36557d;
-    box-shadow:0 4px 16px rgba(92,200,255,.15) inset, 0 1px 0 rgba(255,255,255,.06);
-  }
-  .tab-panels{padding:0}
-  .panel{display:none;padding:16px}
-  .panel.active{display:block}
-  /* Steps & code */
-  .step{margin:14px 0 18px}
-  .step h3{margin:0 0 8px;font-size:16px}
-  pre{
-    margin:0;
-    background:var(--code);
-    border:1px solid #142744;
-    border-radius:12px;
-    padding:14px;
-    overflow:auto;
-    font-family:var(--monospace);
-    font-size:13px;
-    line-height:1.6;
-    position:relative;
-  }
-  .kbd{font-family:var(--monospace);padding:2px 6px;border:1px solid #2a3b58;border-radius:8px;background:#0a1322}
-  .copy{
-    position:absolute;top:8px;right:8px;
-    font-size:12px;background:#0f2137;border:1px solid #284263;
-    color:#cde6ff;border-radius:8px;padding:6px 8px;cursor:pointer;
-  }
-  .copy:active{transform:translateY(1px)}
-  .tip{border-left:3px solid var(--accent);padding:10px 12px;background:#0a1c2a;border:1px solid #15354b;border-radius:10px;color:#bfe8d4}
-  .muted{color:var(--muted)}
-  .footer{margin-top:18px;color:var(--muted);font-size:14px}
-  .spacer{height:8px}
-  @media (max-width:640px){
-    body{padding:18px}
-  }
-</style>
-</head>
-<body>
-  <div class="container">
-    <h1>zkSync OS Devnet – Deployment Guide</h1>
-    <p class="muted">Use <strong>Foundry</strong> or <strong>Hardhat 3</strong> (with Viem or Ethers) to deploy to the zkSync OS Devnet. Click a tab to see the steps.</p>
+# ⚙️ Hardhat 3 with Viem
 
-    <!-- Network Config -->
-    <div class="card" style="margin-top:16px">
-      <div class="header">
-        <strong>🌐 Network Configuration</strong>
-        <span class="badge">Devnet</span>
-      </div>
-      <div style="padding: 10px 0">
-        <table>
-          <thead>
-            <tr>
-              <th style="width:260px">PROPERTY</th>
-              <th>VALUE</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr><td><strong>Network Name</strong></td><td><code>ZKsync OS Devnet</code></td></tr>
-            <tr><td><strong>RPC URL</strong></td><td><a href="https://zksync-os-testnet-alpha.zksync.dev/">https://zksync-os-testnet-alpha.zksync.dev/</a></td></tr>
-            <tr><td><strong>WebSocket URL</strong></td><td><code>wss://zksync-os-testnet-alpha.zksync.dev/ws</code></td></tr>
-            <tr><td><strong>Chain ID</strong></td><td><code>8022833</code></td></tr>
-            <tr><td><strong>Currency Symbol</strong></td><td><code>ETH</code></td></tr>
-            <tr><td><strong>Block Explorer URL</strong></td><td><a href="https://zksync-os-testnet-alpha.staging-scan-v2.zksync.dev/">https://zksync-os-testnet-alpha.staging-scan-v2.zksync.dev/</a></td></tr>
-            <tr><td><strong>Explorer Verification API</strong></td><td><em>(coming soon)</em></td></tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
+### 1. Create a new project folder
+```bash
+mkdir hardhat-example
+cd hardhat-example
+```
 
-    <!-- Tabs -->
-    <div class="card tabs">
-      <div class="tab-bar">
-        <div class="tab active" data-tab="foundry">Foundry</div>
-        <div class="tab" data-tab="hardhat-viem">Hardhat 3 with Viem</div>
-        <div class="tab" data-tab="hardhat-ethers">Hardhat 3 with Ethers</div>
-      </div>
-      <div class="tab-panels">
-        <!-- Foundry Panel -->
-        <div class="panel active" id="foundry">
-          <div class="step">
-            <h3>1. Create a new Foundry project</h3>
-            <pre><button class="copy" data-copy="forge init Counter
-cd Counter">Copy</button>forge init Counter
-cd Counter</pre>
-          </div>
-          <div class="step">
-            <h3>2. Build the project</h3>
-            <pre><button class="copy" data-copy="forge build">Copy</button>forge build</pre>
-          </div>
-          <div class="step">
-            <h3>3. Set your private key for deploying</h3>
-            <pre><button class="copy" data-copy='export TESTNET_PRIVATE_KEY="0x..."'>Copy</button>export TESTNET_PRIVATE_KEY="0x..."</pre>
-          </div>
-          <div class="step">
-            <h3>4. Deploy the contract</h3>
-            <pre><button class="copy" data-copy="forge script script/Counter.s.sol --rpc-url https://zksync-os-testnet-alpha.zksync.dev --broadcast --private-key $TESTNET_PRIVATE_KEY">Copy</button>forge script script/Counter.s.sol --rpc-url https://zksync-os-testnet-alpha.zksync.dev --broadcast --private-key $TESTNET_PRIVATE_KEY</pre>
-          </div>
-          <div class="step">
-            <h3>5. Set the number value</h3>
-            <pre><button class="copy" data-copy="cast send 0xCA1386680bfd9B89c7cc6Fc3ba11938ba6E44fef &quot;setNumber(uint256)&quot; 5 --rpc-url https://zksync-os-testnet-alpha.zksync.dev --private-key $TESTNET_PRIVATE_KEY">Copy</button>cast send 0xCA1386680bfd9B89c7cc6Fc3ba11938ba6E44fef \
-&quot;setNumber(uint256)&quot; 5 \
---rpc-url https://zksync-os-testnet-alpha.zksync.dev \
---private-key $TESTNET_PRIVATE_KEY</pre>
-          </div>
-          <div class="step">
-            <h3>6. Get the latest number value</h3>
-            <pre><button class="copy" data-copy="cast call 0xCA1386680bfd9B89c7cc6Fc3ba11938ba6E44fef &quot;number()(uint256)&quot; --rpc-url https://zksync-os-testnet-alpha.zksync.dev">Copy</button>cast call 0xCA1386680bfd9B89c7cc6Fc3ba11938ba6E44fef &quot;number()(uint256)&quot; \
---rpc-url https://zksync-os-testnet-alpha.zksync.dev</pre>
-          </div>
-        </div>
+### 2. Initialize a new Hardhat 3 project
+```bash
+npx hardhat --init
+```
 
-        <!-- Hardhat + Viem Panel -->
-        <div class="panel" id="hardhat-viem">
-          <div class="step">
-            <h3>1. Create a new project folder</h3>
-            <pre><button class="copy" data-copy="mkdir hardhat-example
-cd hardhat-example">Copy</button>mkdir hardhat-example
-cd hardhat-example</pre>
-          </div>
-          <div class="step">
-            <h3>2. Initialize a new Hardhat 3 project</h3>
-            <pre><button class="copy" data-copy="npx hardhat --init">Copy</button>npx hardhat --init</pre>
-          </div>
-          <div class="step">
-            <h3>3. Add zkSync OS to <span class="kbd">hardhat.config.ts</span></h3>
-            <pre><code>ignition: {
+### 3. Add zkSync OS to `hardhat.config.ts`
+```ts
+ignition: {
   requiredConfirmations: 1,
 },
 networks: {
@@ -238,82 +82,60 @@ networks: {
     url: 'https://zksync-os-testnet-alpha.zksync.dev',
     accounts: [configVariable('TESTNET_PRIVATE_KEY')],
   },
-},</code></pre>
-          </div>
-          <div class="step">
-            <h3>4. Add your private key to the keystore</h3>
-            <pre><button class="copy" data-copy="npx hardhat keystore set TESTNET_PRIVATE_KEY">Copy</button>npx hardhat keystore set TESTNET_PRIVATE_KEY</pre>
-          </div>
-          <div class="step">
-            <h3>5. Compile and deploy the example contract</h3>
-            <pre><button class="copy" data-copy="npx hardhat compile">Copy</button>npx hardhat compile</pre>
-            <div class="spacer"></div>
-            <pre><button class="copy" data-copy="npx hardhat ignition deploy ignition/modules/Counter.ts --network zksyncOS">Copy</button>npx hardhat ignition deploy ignition/modules/Counter.ts --network zksyncOS</pre>
-          </div>
-          <div class="step">
-            <h3>6. Create a new script file</h3>
-            <pre><button class="copy" data-copy="touch scripts/increment.ts">Copy</button>touch scripts/increment.ts</pre>
-          </div>
-        </div>
+},
+```
 
-        <!-- Hardhat + Ethers Panel -->
-        <div class="panel" id="hardhat-ethers">
-          <div class="step">
-            <h3>1. Install dependencies</h3>
-            <pre><button class="copy" data-copy="npm install --save-dev hardhat @nomicfoundation/hardhat-ethers ethers">Copy</button>npm install --save-dev hardhat @nomicfoundation/hardhat-ethers ethers</pre>
-          </div>
-          <div class="step">
-            <h3>2. Add zkSync OS to <span class="kbd">hardhat.config.ts</span></h3>
-            <pre><code>networks: {
+### 4. Add your private key to the keystore
+```bash
+npx hardhat keystore set TESTNET_PRIVATE_KEY
+```
+
+### 5. Compile and deploy the example contract
+```bash
+npx hardhat compile
+npx hardhat ignition deploy ignition/modules/Counter.ts --network zksyncOS
+```
+
+### 6. Create a new script file
+```bash
+touch scripts/increment.ts
+```
+
+---
+
+# 🔗 Hardhat 3 with Ethers
+
+### 1. Install dependencies
+```bash
+npm install --save-dev hardhat @nomicfoundation/hardhat-ethers ethers
+```
+
+### 2. Add zkSync OS to `hardhat.config.ts`
+```ts
+networks: {
   zksyncOS: {
     url: 'https://zksync-os-testnet-alpha.zksync.dev',
     accounts: [process.env.TESTNET_PRIVATE_KEY],
   },
-},</code></pre>
-          </div>
-          <div class="step">
-            <h3>3. Compile and deploy</h3>
-            <pre><button class="copy" data-copy="npx hardhat compile">Copy</button>npx hardhat compile</pre>
-            <div class="spacer"></div>
-            <pre><button class="copy" data-copy="npx hardhat run scripts/deploy.ts --network zksyncOS">Copy</button>npx hardhat run scripts/deploy.ts --network zksyncOS</pre>
-          </div>
-        </div>
-      </div>
-    </div>
+},
+```
 
-    <div class="tip" style="margin-top:18px">
-      <strong>Tip:</strong> Use a dedicated testnet private key and never reuse a mainnet wallet. Verification API is coming soon in the explorer.
-    </div>
-    <div class="footer">Docs: <a href="https://docs.zksync.io/zksync-protocol/zksyncos/overview" style="color:var(--brand)">zkSync OS – Overview</a></div>
-  </div>
+### 3. Compile and deploy
+```bash
+npx hardhat compile
+npx hardhat run scripts/deploy.ts --network zksyncOS
+```
 
-<script>
-  // Tabs
-  const tabs = document.querySelectorAll('.tab');
-  const panels = document.querySelectorAll('.panel');
-  tabs.forEach(t => {
-    t.addEventListener('click', () => {
-      tabs.forEach(x => x.classList.remove('active'));
-      panels.forEach(p => p.classList.remove('active'));
-      t.classList.add('active');
-      const id = t.getAttribute('data-tab');
-      document.getElementById(id).classList.add('active');
-    });
-  });
-  // Copy buttons
-  document.querySelectorAll('.copy').forEach(btn => {
-    btn.addEventListener('click', async () => {
-      const text = btn.getAttribute('data-copy');
-      try {
-        await navigator.clipboard.writeText(text);
-        const old = btn.textContent;
-        btn.textContent='Copied!';
-        setTimeout(()=>btn.textContent=old,1200);
-      } catch(e){
-        alert('Copy failed: ' + e);
-      }
-    });
-  });
-</script>
-</body>
-</html>
+---
+
+# 💡 Notes & Tips
+
+- Use a **dedicated testnet private key** (never reuse a mainnet wallet).
+- You can verify deployments using the **block explorer** (verification API coming soon).
+- For additional details, visit the zkSync OS documentation:  
+  [https://docs.zksync.io/zksync-protocol/zksyncos/overview](https://docs.zksync.io/zksync-protocol/zksyncos/overview)
+
+---
+
+✅ **You’re ready to deploy!**  
+Build, compile, and test your smart contracts on the zkSync OS Devnet with your preferred tooling.
