--- a/content/00.zksync-network/65.zksync-os/07.quickstart.md
+++ b/content/00.zksync-network/65.zksync-os/07.quickstart.md
@@ -14,6 +14,15 @@ Below are setup examples for **Foundry** and **Hardhat 3** (with Viem or Ethers)
 Select your preferred setup tab:
 
 ---
+{% tabs %}
+
+{% tab title="Windows" %} Here are the instructions for Windows {% endtab %}
+
+{% tab title="OSX" %} Here are the instructions for macOS {% endtab %}
+
+{% tab title="Linux" %} Here are the instructions for Linux {% endtab %}
+
+{% endtabs %}
 
 
 # 🧱 Foundry Setup
